[package]
name = "factorio-benchmark-helper-file"
version = "0.3.0"
authors = ["mulark <mulark11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "*", features = ["derive"]}
serde_json = "*"
